--- a/Aspert/Aspert.Android/Aspert.Android.csproj
+++ b/Aspert/Aspert.Android/Aspert.Android.csproj
@@ -158,5 +158,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\user_aspert.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\bg1newicon_aspert.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\bg3newicon_aspert.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\bg4newicon_aspert.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
