--- a/Aspert/Aspert.Android/Aspert.Android.csproj
+++ b/Aspert/Aspert.Android/Aspert.Android.csproj
@@ -169,5 +169,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\bg4newicon_aspert.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\back_aspert.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
