--- a/Aspert/Aspert/Aspert.csproj
+++ b/Aspert/Aspert/Aspert.csproj
@@ -11,10 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Fonts\ConcertOne-Regular.ttf" />
     <None Remove="Resources\Fonts\Roboto-Light.ttf" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\Fonts\ConcertOne-Regular.ttf" />
     <EmbeddedResource Include="Resources\Fonts\Roboto-Light.ttf" />
   </ItemGroup>
 
